--- a/src/Components/Player/PlayerList.module.css
+++ b/src/Components/Player/PlayerList.module.css
@@ -18,3 +18,15 @@
     align-items: center;
     justify-content: center;
 }
+
+.noTeamMessage {
+    padding: 0.5rem;
+    margin: 10px;
+    background-color: rgba(212, 120, 97, 0.5);
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+}
